# aurora_ros2

./: .gitignore
src/aurora_r2/: CMakeLists.txt  package.xml
src/aurora_r2/launch/: aurora.launch.py
src/aurora_r2/src/: aurora_bridge_node.cpp
src/aurora_r2/src/server/: server_map_holder.h  server_params.cpp  server_params.h  server_work_data.h  server_workers.cpp  slamware_ros_sdk_server_node.cpp
